--- a/_posts/2024-03-26-mscpaper.markdown
+++ b/_posts/2024-03-26-mscpaper.markdown
@@ -119,7 +119,7 @@ For further reading on a given topic, see below (papers are author first; textbo
 - [Neural Burst Codes Disguised as Rate Codes](https://www.nature.com/articles/s41598-021-95037-z)
 
 ### In-blog footnotes
-- $$\dagger$$ : one may notice that the difference between rate and temporal codes is a little more subtle than described above. One could imagine a situation where the stimulus being encoded in the firing rate of cell 'A' changes very quickly, and the downstream cell decoding A's message is very sensitive to each spike. In this case, even with a rate code small differences in spike timing could convey information. In this way, the *real* distinction between rate and temporal codes depends on whether there is information in cell A's spike train at higher frequencies than those of the stimulus that cell A is encoding. See the the Theunissen & Miller ref for more details.
+- $$\dagger$$ : one may notice that the difference between rate and temporal codes is a little more subtle than described above. One could imagine a situation where the stimulus being encoded in the firing rate of cell 'A' changes very quickly, and the downstream cell decoding A's message is very sensitive to each spike. In this case, even with a rate code small differences in spike timing could convey information. In this way, the *real* distinction between rate and temporal codes depends on whether there is information in cell A's spike train at higher frequencies than those of the stimulus that cell A is encoding. See the Theunissen & Miller ref for more details.
 
 
 &nbsp; &nbsp; &nbsp;
